force-app/main/default/objects/Quote_Request_Claim_History__c.object
<CustomObject>
    <description>Detail Line Items for Claim History</description>
    <fields>
        <fullName>Claim_From__c</fullName>
        <label>Claim From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Reimbursement__c</fullName>
        <label>Claim Reimbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Through__c</fullName>
        <label>Claim Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICD10__c</fullName>
        <label>ICD10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_NPN__c</fullName>
        <label>Physician NPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Request Claims History</relationshipLabel>
        <relationshipName>Quote_Request_Claims_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>RX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Request Claim History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Claim_From__c</columns>
        <columns>Claim_Through__c</columns>
        <columns>Physician_NPN__c</columns>
        <columns>ICD10__c</columns>
        <columns>Claim_Reimbursement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>﻿Claim Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Request Claims History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>