force-app/main/default/objects/Quote_Request_Claim_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Claim_From__c</columns>
    <columns>Claim_Through__c</columns>
    <columns>Physician_NPN__c</columns>
    <columns>ICD10__c</columns>
    <columns>Claim_Reimbursement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>